--- a/chart/bouncer/templates/role.yaml
+++ b/chart/bouncer/templates/role.yaml
@@ -1,7 +1,7 @@
 kind: Role
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: basic-role
+  name: {{ .Chart.Name }}-role
 rules:
   - apiGroups: [""]
     resources: ["services", "pods", "replicationcontrollers", "persistentvolumeclaims"]
