--- a/chart/bouncer/values.yaml
+++ b/chart/bouncer/values.yaml
@@ -42,13 +42,13 @@ service:
   targetPort: 8085
 
 ingress:
-  enabled: false
+  enabled: true
   annotations: {}
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
-    - host: chart-example.local
-      paths: []
+    - host: www.retaily.xyz
+      paths: ['/bouncer']
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
